Fixed layout issue

--- a/src/components/Resume/Body/body.css
+++ b/src/components/Resume/Body/body.css
@@ -58,7 +58,7 @@
 .resume--body--workexperience--filter--wrapper {
 	display: flex;
 	justify-content: space-around;
-	padding: 40px;
+	padding: 40px 0;
 	width: 80%;
 	margin: 0 auto;
 }
