--- a/src/components/Resume/Header/header.css
+++ b/src/components/Resume/Header/header.css
@@ -26,7 +26,6 @@
 	padding: 0 20px;
 	border: 1px solid #fff;
 	border-radius: 3px;
-	margin: 0 20px;
 }
 
 .resume--header--languages h1 {
